[gd_scene load_steps=4 format=3 uid="uid://dmstmme4i866s"]

[ext_resource type="Script" uid="uid://cnj5m8sfuiou3" path="res://map_with_sets/MapLocation.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://csn2rfqiu2f1a" path="res://combat/traits/Tappable.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://codw1ga4uilvh" path="res://map_with_sets/traits/Node.tscn" id="3"]

[node name="MapLocation" type="Area2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource("1")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(150, -150, 150, 150, -150, 150, -150, -150)

[node name="ExitArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ExitArea"]
visible = false
modulate = Color(0.427451, 0, 0, 1)
polygon = PackedVector2Array(200, -200, 200, 200, -200, 200, -200, -200)

[node name="Node" parent="." instance=ExtResource("3")]

[node name="Tappable" parent="." instance=ExtResource("2")]

[connection signal="body_entered" from="." to="." method="_on_MapLocation_body_entered"]
[connection signal="body_exited" from="ExitArea" to="." method="_on_ExitArea_body_exited"]
